--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+	<div class="header">
+		<h1>Matt Shulev-Taylor Website</h1>
+	</div>
+	<p><font size="+5">I have a cold</font></p>
+	
+	<div></div> {
+	
 </body>
 </html>
