--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 		<h1>Matt Shulev-Taylor Website</h1>
 	</div>
 	<p><font size="+5">I have a cold</font></p>
+	<img> src="(https://assets.stickpng.com/images/580b57fcd9996e24bc43c4f1.png)"<img />
+	<div></div> {
+
 </body>
 </html>
