--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<h1>Matt Shulev-Taylor Website</h1>
 	</div>
 	<p><font size="+5">I have a cold</font></p>
-	<img> src="(https://assets.stickpng.com/images/580b57fcd9996e24bc43c4f1.png)"<img />
+	<img src="580b57fcd9996e24bc43c4f1.png">
 	<div></div> {
 
 </body>
