--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<h1>Matt Shulev-Taylor Website</h1>
 	</div>
 	<p><font size="+5">I have a cold</font></p>
-	<img src="580b57fcd9996e24bc43c4f1.png">
-	<div></div> {
+	<img src="580b57fcd9996e24bc43c4f1.png" alt="COYI" width="460" height="345">
+	
 
 </body>
 </html>
