--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
 	<div class="header">
 		<h1>Matt Shulev-Taylor Website</h1>
 	</div>
-	<p><font size="+5">I have a cold </font></p> 
-	<p><font size="+10">I love West Ham</font></p>
-	<img src="580b57fcd9996e24bc43c4f1.png" alt="COYI" width="800" height="800">
 	
+	<p><font size="+10">My names Matt and I love West Ham.</font></p>
+	
+    <img src="580b57fcd9996e24bc43c4f1.png" alt="COYI" width="400" height="400">
+	
+    <p><font size="+5">I try and go to every home game as I have a season ticket.</font></p> 
+    
+    <p><font size="+5">I also love building PC's and upgrading them. Here is a table with some of my pc specs and the price I paid for the part at the time.</font></p> 
+
+    <table>
+    <tr>
+        <th>Computer Part</th>
+        <th>Name</th>
+        <th>Price</th>
+    </tr>
+    <tr>
+        <td>CPU</td>
+        <td>5600</td>
+        <td>135</td>
+    </tr>
+    <tr>
+        <td>GPU</td>
+        <td>RX 6700</td>
+        <td>350</td>
+    </tr>
+    <tr>
+        <td>RAM</td>
+        <td>8GBx2 3600mhz</td>
+        <td>55</td>
+    </tr>
+    </table>
 
 </body>
 </html>
