--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color: #d9bdd8">
 	<div class="header">
 		<h1>Matt Shulev-Taylor Website</h1>
 	</div>
 	
-	<p><font size="+10">My names Matt and I love West Ham.</font></p>
+	<p><font size="+5"><FONT COLOR ="#846d8f">My names Matt and I love West Ham.</font></p>
 	
     <img src="580b57fcd9996e24bc43c4f1.png" alt="COYI" width="400" height="400">
 	
-    <p><font size="+5">I try and go to every home game as I have a season ticket.</font></p> 
+    <p><font size="+5"><FONT COLOR ="#846d8f">I try and go to every home game as I have a season ticket.</font></p> 
     
-    <p><font size="+5">I also love building PC's and upgrading them. Here is a table with some of my pc specs and the price I paid for the part at the time.</font></p> 
+    <p><font size="+5"><FONT COLOR ="#846d8f">I also love building PC's and upgrading them. Here is a table with some of my pc specs and the price I paid for the part at the time.</font></p> 
 
-    <table>
+    <table size="+5">
     <tr>
         <th>Computer Part</th>
         <th>Name</th>
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
