--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <body style="background-color: #d9bdd8">
 	<div class="header">
-		<h1>Matt Shulev-Taylor Website</h1>
+		<h1><font size="+15">Matt Shulev-Taylor Website</font></h1>
 	</div>
 	
-	<p><font size="+5"><FONT COLOR ="#846d8f">My names Matt and I love West Ham.</font></p>
+	<p><font size="+2"><FONT COLOR ="#846d8f">My names Matt and I love West Ham.</font></p>
 	
     <img src="580b57fcd9996e24bc43c4f1.png" alt="COYI" width="400" height="400">
 	
-    <p><font size="+5"><FONT COLOR ="#846d8f">I try and go to every home game as I have a season ticket.</font></p> 
+    <p><font size="+2"><FONT COLOR ="#846d8f">I try and go to every home game as I have a season ticket.</font></p> 
     
-    <p><font size="+5"><FONT COLOR ="#846d8f">I also love building PC's and upgrading them. Here is a table with some of my pc specs and the price I paid for the part at the time.</font></p> 
+    <p><font size="+2"><FONT COLOR ="#846d8f">I also love building PC's and upgrading them. Here is a table with some of my pc specs and the price I paid for the part at the time.</font></p> 
+    
 
-    <table size="+5">
+    <table size="+2"><FONT COLOR ="#846d8f"></FONT>
     <tr>
         <th>Computer Part</th>
         <th>Name</th>
@@ -35,7 +36,7 @@
         <td>55</td>
     </tr>
     </table>
-
+    <span title="Insert Easter Egg"><font size="-5"><FONT COLOR ="#000000"> Hover your mouse over me for an easter egg!</font></span>
 </body>
 </html>
 
